cot-macros/tests/ui/derive_select_as_form_field_struct.rs
use cot_macros::SelectAsFormField;

#[derive(SelectAsFormField)]
struct NotAnEnum {
    x: u8,
}

fn main() {}

